--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -43,6 +43,9 @@
       <property name="editable">
        <bool>true</bool>
       </property>
+      <property name="duplicatesEnabled">
+       <bool>false</bool>
+      </property>
      </widget>
     </item>
     <item row="0" column="0">
